# sub-tracker

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/controllers/: subscription.rs  user.rs
src/db/: subscription.rs  user.rs
src/db/migrations/: 20241225014938_init.sql  20241226155625_subscription_table.sql
src/middlewares/: auth.rs
src/migrations/: 20241225014938_init.sql
src/models/: subscription.rs  user.rs
src/utils/: password.rs  token.rs
