[package]
name = "sub-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
validator = { version = "0.19", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.8", features = [ "postgres", "uuid", "chrono" ,"runtime-tokio", "tls-native-tls" ] }
argon2 = "0.5.3"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enables `serde` support
]
